test_outputs/connlist/exposure_test_with_different_rules_5_with_matching_pods_exposure_output.txt
0.0.0.0-255.255.255.255[External] => hello-world/matching-one-rule[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => hello-world/matching-two-rules[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment] : All Connections
hello-world/matching-one-rule[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-one-rule[Deployment] => hello-world/matching-two-rules[Deployment] : All Connections
hello-world/matching-one-rule[Deployment] => hello-world/workload-a[Deployment] : TCP 8080
hello-world/matching-one-rule[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/matching-two-rules[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-two-rules[Deployment] => hello-world/matching-one-rule[Deployment] : All Connections
hello-world/matching-two-rules[Deployment] => hello-world/workload-a[Deployment] : TCP 8080,9090
hello-world/matching-two-rules[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] => hello-world/matching-one-rule[Deployment] : All Connections
hello-world/workload-a[Deployment] => hello-world/matching-two-rules[Deployment] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] => hello-world/matching-one-rule[Deployment] : All Connections
hello-world/workload-b[Deployment] => hello-world/matching-two-rules[Deployment] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : TCP 9090

Exposure Analysis Result:
Egress Exposure:
hello-world/matching-one-rule[Deployment]  	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-one-rule[Deployment]  	=> 	entire-cluster : All Connections
hello-world/matching-two-rules[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-two-rules[Deployment] 	=> 	entire-cluster : All Connections
hello-world/workload-a[Deployment]         	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment]         	=> 	entire-cluster : All Connections
hello-world/workload-b[Deployment]         	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment]         	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/matching-one-rule[Deployment]  	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-one-rule[Deployment]  	<= 	entire-cluster : All Connections
hello-world/matching-two-rules[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/matching-two-rules[Deployment] 	<= 	entire-cluster : All Connections
hello-world/workload-a[Deployment]         	<= 	hello-world/[pod with {{Key:role,Operator:In,Values:[w x y z],}}] : TCP 8080
hello-world/workload-a[Deployment]         	<= 	hello-world/[pod with {{Key:role,Operator:NotIn,Values:[x y],}}] : TCP 9090
hello-world/workload-b[Deployment]         	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment]         	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/matching-one-rule[Deployment] is not protected on Egress
hello-world/matching-one-rule[Deployment] is not protected on Ingress
hello-world/matching-two-rules[Deployment] is not protected on Egress
hello-world/matching-two-rules[Deployment] is not protected on Ingress
hello-world/workload-a[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
